--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,12 @@
 			href="assets/images/favicon-32x32.png"
 		/>
 		<!-- Stylesheet setup -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap"
+			rel="stylesheet"
+		/>
 		<link rel="stylesheet" href="assets/style/style.scss" />
 		<style>
 			.attribution {
@@ -38,11 +44,12 @@
 		</style>
 	</head>
 	<body>
+		<main class="main-container"></main>
 		Shift the overall look and feel by adding these wonderful touches to
 		furniture in your home Ever been in a room and felt like something was
 		missing? Perhaps it felt slightly bare and uninviting. I’ve got some simple
 		tips to help you make any room feel complete. Michelle Appleton 28 Jun 2020
-		Share
+		Share esto es una prueba
 
 		<div class="attribution">
 			Challenge by
