--- a/src/index.html
+++ b/src/index.html
@@ -109,12 +109,7 @@
 						</svg>
 					</button> -->
 					<div id="js-share-cta" class="share-cta">
-						<button
-							id="js-btn"
-							onclick="togglePopup()"
-							class="share-cta__btn"
-							type="button"
-						>
+						<button id="js-btn" class="share-cta__btn" type="button">
 							<svg xmlns="http://www.w3.org/2000/svg" width="15" height="13">
 								<path
 									fill="currentColor"
